<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/padding_screen_bottom"
    android:paddingEnd="@dimen/padding_screen_end"
    android:paddingStart="@dimen/padding_screen_start"
    android:paddingTop="@dimen/padding_screen_top"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/size_text_chronometer" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:text="@string/bt_play" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:text="@string/bt_pause"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:text="@string/bt_restart"
                android:visibility="gone" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:text="@string/bt_lap"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/title_laps" />-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_view_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_records"
                android:visibility="gone" />

        </FrameLayout>
    </LinearLayout>

</LinearLayout>